# my-ci

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Makefile  README.md  build.rs  compose.yml
.github/workflows/: ci.yml  release.yml
crates/my-ci-macros/: Cargo.toml
crates/my-ci-macros/src/: lib.rs
my-ci/: 1.extract.Containerfile  2.transform.Containerfile  3.validate.Containerfile  4.publish.Containerfile  workflows.toml
src/: artifacts.rs  build.rs  cli.rs  config.rs  events.rs  graph.rs  gui.rs  history.rs  image_gc.rs  init.rs  main.rs  oci.rs  run.rs  telemetry.rs  ui_assets.rs
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
