[package]
name = "my-ci"
version = "0.0.3"
edition = "2024"
license = "MIT"
description = "Minimalist Local CICD"
repository = "https://github.com/geoffsee/my-ci"

[[bin]]
name = "my-ci"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
bollard = "0.18"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15.7"
futures-util = "0.3"
my-ci-macros = { path = "crates/my-ci-macros", version = "0.0.2" }
rust-embed = { version = "8.11.0", features = ["include-exclude"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
toml = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"
